Improved readibility of HttpServerVerticle. Added test to retrieve points. Sampling almost implemented.
